--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Here’s the adjusted version: each `.slide` now becomes a flex column centered horizontally, so the notice box will auto-center under the title. The rest (arrows, video, phantom placeholders) remains the same.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -234,3 +237,4 @@
   </script>
 </body>
 </html>
+```
